style(column-bar): ensure overflow is hidden #DESIGNSYS-114

--- a/projects/layout/src/column-bar/column-bar.component.scss
+++ b/projects/layout/src/column-bar/column-bar.component.scss
@@ -5,6 +5,7 @@ ngx-column-bar {
     padding: var(--ngx-column-bar-padding, 0.25rem 0);
     gap: var(--ngx-column-bar-gap, 0.75rem);
     min-inline-size: 0;
+    overflow: hidden;
 
     h1[ngxBarTitle],
     h2[ngxBarTitle],
